DEPLOY-YML/misc/gateway/httproute.yml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: nginx-route
  namespace: default
spec:
  parentRefs:
    - name: my-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/"
      backendRefs:
        - name: nginx-service
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: "/main"
      backendRefs:
        - name: webapp
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: "/health"
      backendRefs:
        - name: mycas-webapp.mycas.svc.cluster.local
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: "/search"
      backendRefs:
        - name: mycas-webapp.mycas.svc.cluster.local
          port: 80
